--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <nav class="navbar">
             <a href="#" class="logo">
-                <img src="/images/macdee-logo.png" alt="Macdee Ready-to-Wear Logo" class="logo-img">
+                <img src="/images/macdee-logo.webp" alt="Macdee Ready-to-Wear Logo" class="logo-img">
                 Macdee Styles
             </a>
             <ul class="nav-links">
@@ -37,7 +37,7 @@
                 <h1 class="hero-tagline">Step Into Elegance</h1>
                 <button class="whatsapp-button cta-button" onclick="window.open('https://wa.me/2347069523755?text=Hello%20Macdee%20Ready-to-Wear,%20I%27d%20like%20to%20make%20an%20order.', '_blank')">Order Now on WhatsApp</button>
             </div>
-            <img src="/images/macdee-hero.png" alt="Elegant Nigerian fashion model in native wear" class="hero-image">
+            <img src="/images/macdee-hero.webp" alt="Elegant Nigerian fashion model in native wear" class="hero-image">
         </section>
 
         <section id="gallery" class="gallery-section fade-in">
